# search-example

./: Cargo.toml  domain.md
domain/src/: lib.rs  model.rs
domain/src/interfaces/: advertisement_repository.rs
domain/src/model/: advertisement.rs  error.rs  item.rs  search.rs
domain/src/service/: search_service.rs
infra/: Cargo.toml
infra/src/: advertisement_repository.rs  lib.rs
tf/: .gitignore  .terraform.lock.hcl  main.tf  terraform.tfstate.backup
tf/.terraform/: terraform.tfstate
web/: Cargo.toml
web/src/: main.rs
